--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,6 +1,8 @@
 ---
 title: "Peer Assessment 1 for Reproducible Research"
-output: html_document
+output: 
+  html_document:
+    keep_md: true
 ---
 
 ## Loading and preprocessing the data
